--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,7 @@ bs4~=0.0.2
 pywin32
 beautifulsoup4~=4.12.3
 utils~=1.0.2
+weasyprint~=63.1
+django-ckeditor~=6.7.2
+
+python-dateutil~=2.9.0.post0
